fixed animation mobile bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,22 +215,6 @@ li div {
   ) !important;
 }
 
-.scroll-container-bg {
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 0) 15%,
-    rgba(255, 255, 255, 0) 85%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
-  pointer-events: none;
-}
 
 .dot {
   opacity: 1;
